--- a/package.json
+++ b/package.json
@@ -1,21 +1,42 @@
 {
 
   "name": "s69_caffeine_the_coffee_zoo_experience",
+
   "version": "1.0.0",
+
   "main": "index.js",
+
   "scripts": {
+
+    "start": "node server.js",
+
+    "dev": "nodemon server.js",
+
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
+
   "keywords": [],
+
   "author": "",
+
   "license": "ISC",
+
   "description": "",
+
   "dependencies": {
-    "s69_caffeine_the_coffee_zoo_experience": "file:",
+
     "dotenv": "^16.4.7",
+
     "express": "^4.21.2",
-    "mongoose": "^8.9.6",
-    "nodemon": "^3.1.9"
+
+    "mongoose": "^8.10.0",
+
+    "nodemon": "^3.1.9",
+
+    "s69_caffeine_the_coffee_zoo_experience": "file:"
 
   }
+
 }
+
